# Lumio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rustfmt.toml
docs/: backend_consolidation.md  theming.md  unified_window_loop.md
examples/: accessibility_example.rs  background_example.rs  background_example.xml  chat_message.xml  contact_item.xml  edit_polish_example.rs  edit_polish_example.xml  empty_example.rs  empty_example.xml  example.rs  explorer.rs  explorer.xml  gen_ninepatch_assets.rs  grid_example.rs  grid_example.xml  headless_render.rs  image_scaling_example.rs  image_scaling_example.xml  label_polish_example.rs  label_polish_example.xml  layout.xml  layouts_example.rs  layouts_example.xml  menubar_example.rs  menubar_example.xml  message.xml  messenger.rs  messenger_layout.xml  multiwindow_dialog.xml  multiwindow_example.rs  multiwindow_example.xml  multiwindow_info.xml  ninepatch_example.rs  ninepatch_example.xml  notification_example.rs  notification_example.xml  richtext_example.rs  richtext_example.xml  scroll_example.rs  scroll_example.xml  (+8 more)
examples/assets/: fancy_button.xml  message.xml
res/drawables/: button_classic.xml  button_classic_back.xml  button_classic_body.xml  checkbox_classic.xml  edit_caret_classic.xml  edit_field_classic_body.xml
src/: accessibility.rs  app.rs  assets.rs  backend.rs  background.rs  clipboard.rs  common.rs  containers.rs  dialog.rs  events.rs  image_source.rs  layout.rs  lib.rs  ninepatch.rs  prelude.rs  render.rs  shortcut.rs  skin.rs  svg.rs  tests.rs  traits.rs  types.rs  ui.rs  view_base.rs  win.rs
src/drawables/: button_classic.xml  button_classic_back.xml  button_classic_body.xml  checkbox_classic.xml  checkbox_classic_checkmark.xml  combo_classic_arrow.xml  combo_classic_focus.xml  edit_caret_classic.xml  edit_field_classic_back.xml  edit_field_classic_body.xml  menu_classic_arrow.xml  panel_classic.xml  panel_classic_back.xml  popup_classic_body.xml  progress_classic_fill.xml  radio_classic_back.xml  radio_classic_body.xml  radio_classic_indicator.xml  scrollbar_classic_arrow_down.xml  scrollbar_classic_arrow_left.xml  scrollbar_classic_arrow_right.xml  scrollbar_classic_arrow_up.xml  scrollbar_classic_track.xml  separator_classic_h.xml  separator_classic_v.xml  tab_classic_active.xml  tab_classic_content.xml  tab_classic_inactive.xml
src/drawing/: engine.rs  engine_software.rs  mod.rs  palette.rs  parser.rs  primitives.rs  registry.rs  selector.rs
src/gui/: containers.rs  mod.rs  traits.rs  types.rs  ui.rs  view_base.rs  win.rs
src/gui/drawing/: engine.rs  mod.rs  parser.rs  primitives.rs  registry.rs  selector.rs
src/gui/themes/: classic.rs  mod.rs
src/gui/views/: button.rs  checkbox.rs  edit.rs  label.rs  list.rs  listview.rs  mod.rs  recyclerview.rs
src/input/: from_speedy2d.rs  mod.rs
src/software_window/: mod.rs
src/styles/: selector.rs
src/text/: mod.rs  software.rs  speedy.rs
src/themes/: classic.rs  mod.rs  renderer_gl.rs  renderer_software.rs  software.rs  utils.rs
src/views/: button.rs  checkbox.rs  combobox.rs  dialog.rs  edit.rs  grid.rs  iconlist.rs  imagebutton.rs  imageview.rs  label.rs  list.rs  memo.rs  menubar.rs  mod.rs  notification_stack.rs  popupmenu.rs  progressbar.rs  radiobutton.rs  recyclerview.rs  richtext.rs  scrollview.rs  separator.rs  slider.rs  splitpanel.rs  statusbar.rs  tableview.rs  tabview.rs  termgrid.rs  treeview.rs
src/window/: input_winit.rs  mod.rs  surface_gl.rs  surface_software.rs
tests/: accessibility.rs  event_system.rs  keyboard_navigation.rs  ninepatch_render.rs  software_render.rs  splitpanel_focus.rs  tree_icon_render.rs
