[package]
name = "lumio"
version = "0.1.0"
edition = "2024"
authors = ["Revertron <lumio@revertron.com>"]
description = "A declarative XML-based GUI framework for Rust built on speedy2d"
keywords = ["gui", "ui", "xml", "desktop", "framework"]
categories = ["gui", "rendering"]

[features]
default = ["text-speedy2d"]
# Selects the text shaping/measurement backend. Exactly one must be enabled.
# speedy2d remains a normal (non-optional) dependency for windowing, graphics
# and input; this feature only switches the text layer in `src/text` and the
# font loader in `src/assets.rs`. A future `text-software` backend would be
# additive here.
text-speedy2d = []

[dependencies]
quick-xml = "0.40.1"
downcast-rs = "2.0.2"
speedy2d = { path="../Speedy2D" }
image = "0.25.10"
rand = "0.8.6"
arboard = "3"
resvg = { version = "0.47.0", default-features = false }
usvg = { version = "0.47.0", default-features = false }
tiny-skia = "0.12.0"
font-kit = "0.14"

[dev-dependencies]
include_dir = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.