[package]
name = "lumio"
version = "0.1.0"
edition = "2024"
authors = ["Revertron <lumio@revertron.com>"]
description = "A declarative XML-based GUI framework for Rust built on speedy2d"
keywords = ["gui", "ui", "xml", "desktop", "framework"]
categories = ["gui", "rendering"]

[features]
default = ["backend-gl"]
# Selects the rendering + text backend. Exactly one `backend-*` must be enabled.
# - backend-gl: the GL window (`win.rs`) + `Classic` theme + speedy2d text.
# - backend-software: the tiny-skia software renderer + fontdue text (headless
#   today; gains a winit/softbuffer window loop in a later step).
# The `text-*` features are the text-layer half each backend pulls in.
backend-gl = ["text-speedy2d"]
backend-software = ["text-software", "dep:fontdue", "dep:winit", "dep:softbuffer"]
# Pulls in speedy2d — the GL backend's only consumer of it. The software
# backend enables neither, so speedy2d is absent from its dependency tree.
text-speedy2d = ["dep:speedy2d"]
text-software = []

[dependencies]
quick-xml = "0.40.1"
downcast-rs = "2.0.2"
speedy2d = { path="../Speedy2D", optional = true }
image = "0.25.10"
rand = "0.8.6"
arboard = "3"
resvg = { version = "0.47.0", default-features = false }
usvg = { version = "0.47.0", default-features = false }
tiny-skia = "0.12.0"
font-kit = "0.14"
fontdue = { version = "0.9", optional = true }
# Software window backend (gated by `backend-software`). Pin winit to 0.30 to
# unify with the vendored speedy2d's winit (no duplicate in the tree).
winit = { version = "0.30", optional = true, default-features = false, features = ["rwh_06", "x11", "wayland"] }
softbuffer = { version = "0.4", optional = true }

[dev-dependencies]
include_dir = "0.7"

# Most examples use the backend-neutral `lumio::run` launcher, so they build on
# either backend and cargo auto-discovers them — no per-example entry needed.
# Only the two software-specific demos need an explicit backend gate:
#   headless_render       — uses `render::render_to_pixmap` (software-only).
#   software_window_example — the dedicated software-window demo.
[[example]]
name = "headless_render"
required-features = ["backend-software"]
[[example]]
name = "software_window_example"
required-features = ["backend-software"]

# The software backend (tiny-skia + fontdue) renders on the CPU, so an
# unoptimized debug build is very slow (~30x). Optimize dependencies at full
# level and our own crate lightly: debug builds stay responsive and still
# debuggable. (The GL backend offloads to the GPU and isn't affected.)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.