[package]
name = "lumio-gui"
version = "0.5.1"
edition = "2024"
authors = ["Revertron <lumio@revertron.com>"]
description = "A declarative, XML-based retained-mode GUI toolkit for Rust desktop apps (GL or software rendering backend)"
keywords = ["gui", "ui", "xml", "desktop", "framework"]
categories = ["gui", "rendering"]
license = "MIT"
repository = "https://github.com/Revertron/Lumio"
readme = "README.md"

# Published on crates.io as `lumio-gui` (the plain `lumio` name is taken), but the
# library keeps the `lumio` name: consumers add `lumio-gui` yet still `use lumio::…`.
[lib]
name = "lumio"

[features]
default = ["backend-gl"]
# Selects the rendering + text backend(s). At least one `backend-*` must be enabled.
# Both windowed backends share the winit window loop in `src/window/`; they differ
# only in the per-window `RenderSurface`:
# - backend-gl: speedy2d as a GL renderer (its `windowing` feature OFF) painting
#   `Classic`, over a glutin-created GL context Lumio owns.
# - backend-software: tiny-skia software renderer + fontdue text, in a winit window.
# - BOTH together: the runtime tries GL first and falls back to software rendering
#   if GL init fails (emulated framebuffer, missing driver). LUMIO_BACKEND=gl|software
#   forces one; see src/backend.rs.
# The `text-*` features are the text-layer half each backend pulls in.
backend-gl = ["text-speedy2d", "system-fonts", "clipboard",
              "dep:winit", "dep:glutin", "dep:glutin-winit", "dep:raw-window-handle",
              "dep:accesskit_winit"]
# Desktop software backend = the software core + a winit/softbuffer window + the
# native niceties (system fonts, clipboard).
backend-software = ["software", "system-fonts", "clipboard", "dep:winit", "dep:softbuffer",
                    "dep:accesskit_winit"]
# The software render + text CORE: tiny-skia + fontdue, exposing `render_to_pixmap`
# and `SoftwareTheme` with NO window loop and NO native system-font/clipboard deps.
# An embedder (e.g. a host that drives the UI externally and presents the pixmap
# itself) enables exactly this, with `default-features = false`.
software = ["text-software", "dep:fontdue"]
# Pulls in speedy2d (renderer only). The software backend enables neither, so
# speedy2d is absent from its dependency tree.
text-speedy2d = ["dep:speedy2d"]
text-software = []
# Native system-font enumeration via font-kit. Off in the headless `software` core.
system-fonts = ["dep:font-kit"]
# Native clipboard via arboard. Off in the headless `software` core.
clipboard = ["dep:arboard"]

[dependencies]
log = "0.4"
quick-xml = "0.41.0"
downcast-rs = "2.0.2"
# Screen-reader accessibility. `accesskit` is the platform-independent tree
# vocabulary (Role/Node/TreeUpdate) — always on, used by the View trait and the
# tree builder, and works headless. `accesskit_winit` binds the tree to the
# platform APIs (UIA/NSAccessibility/AT-SPI) inside the winit window loop, so
# only the windowed backends pull it.
accesskit = "0.24"
accesskit_winit = { version = "0.33", optional = true }
# speedy2d is used as a pure GL renderer: `windowing` (winit/glutin) is off;
# `image-loading` stays on for `Classic`'s texture decoding. Lumio owns the
# window + GL context (see the `dep:glutin*` deps below).
# Published fork of speedy2d, pulled in under the `speedy2d` name via `package`.
speedy2d = { package = "speedy2d-rev", version = "1.0.0", optional = true, default-features = false, features = ["image-loading"] }
image = "0.25.10"
rand = "0.8.6"
arboard = { version = "3", optional = true }
resvg = { version = "0.47.0", default-features = false }
usvg = { version = "0.47.0", default-features = false }
tiny-skia = "0.12.0"
font-kit = { version = "0.14", optional = true }
fontdue = { version = "0.9", optional = true }
# winit drives the window loop for BOTH backends (shared, 0.30 to match the
# vendored speedy2d's winit — no duplicate in the tree).
# `wayland-csd-adwaita` lets winit draw client-side decorations on Wayland
# compositors that don't provide server-side ones (e.g. WSLg's Weston).
winit = { version = "0.30", optional = true, default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-csd-adwaita"] }
softbuffer = { version = "0.4", optional = true }
# GL backend only: create the GL context Lumio hands to speedy2d's GLRenderer.
# Versions pinned to match the vendored speedy2d (glutin 0.32 / rwh 0.6).
glutin = { version = "0.32.3", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6.2", optional = true }

[dev-dependencies]
include_dir = "0.7"

# Most examples use the backend-neutral `lumio::run` launcher, so they build on
# either backend and cargo auto-discovers them — no per-example entry needed.
# Only the two software-specific demos need an explicit backend gate:
#   headless_render       — uses `render::render_to_pixmap` (software-only).
#   software_window_example — the dedicated software-window demo.
[[example]]
name = "headless_render"
required-features = ["backend-software"]
[[example]]
name = "software_window_example"
required-features = ["backend-software"]

# The software backend (tiny-skia + fontdue) renders on the CPU, so an
# unoptimized debug build is very slow (~30x). Optimize dependencies at full
# level and our own crate lightly: debug builds stay responsive and still
# debuggable. (The GL backend offloads to the GPU and isn't affected.)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.